# LaborDocs-MetaRAG

./: README.md  chunks.py  config.py  main.py  metadata_gen.py  plots.py  prompt.py  pyproject.toml  rag.py  requirements.txt  response_evaluation.py  retrieval_evaluation.py  retriever.py  retriever_eval.py  retriever_gt.py  sample_q.json  sample_q1.json  test1.py  viz.py
chunk_output/: GEO-CBA 2022-2025_naive_chunks.json  GEO-CBA 2022-2025_recursive_length_chunks.json  GEO-CBA 2022-2025_semantic_p85.0_chunks.json  NTT-FACULTY 2023-final_naive_chunks.json  NTT-FACULTY 2023-final_recursive_length_chunks.json  NTT-FACULTY 2023-final_semantic_p85.0_chunks.json  TT-FACULTY 2023-final_naive_chunks.json  TT-FACULTY 2023-final_recursive_length_chunks.json  TT-FACULTY 2023-final_semantic_p85.0_chunks.json  UIC-CIR CBA 2022-2026_naive_chunks.json  UIC-CIR CBA 2022-2026_recursive_length_chunks.json  UIC-CIR CBA 2022-2026_semantic_p85.0_chunks.json  processed_pdfs_log.json
chunking/: base_chunker.py  chunk_evaluator.py  naive_chunker.py  recursive_chunker.py  semantic_chunker.py
embedding/: base_embedder.py  evaluator.py  naive_embedder.py  prefix_embedder.py  tfidf_embedder.py
evaluation/: metadata_evaluation.json  metadata_gen_metrics.json
input_files/: GEO-CBA 2022-2025.txt  NTT-FACULTY 2023-final.txt  TT-FACULTY 2023-final.txt  UIC-CIR CBA 2022-2026.txt
metadata/: llm_metadata_generator.py  metadata_evaluator.py
retrieval/: base_retriever.py  content_retriever.py  evaluator.py  hybrid_metarag_retriever.py  kg_enhanced_retriever.py  kg_multi_hop_expand.py  (+3 more)
(+87 files in other folders)
