[project]
name = "metarag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "langchain-google-genai==2.0.5",
    "matplotlib>=3.10.7",
    "nest-asyncio>=1.6.0",
    "ragas>=0.4.0",
    "seaborn>=0.13.2",
]
